@@ -33,6 +33,7 @@
             process.memory() now reports time taken for GC and vars GC'd
             Slightly more aggressive idle GC on most platforms (at 5% free)
             Don't warn the user when we had to run a GC pass during execution
+            Fix issue drawing on right-hand side of rotated graphics where H>W (regression in 1v93)
 
      1v93 : Ensure that specifying too many advertising UUIDs causes an exception, not a reboot
             nRF5x: Fix for time jump caused by reentrancy in jshGetSystemTime
